style.css
.bodyStyle {
  background-color: black;
  height: 100vh;
}

.iconAll {
  list-style-type: none;
  display: inline;
  /*margin: 100px;*/
  cursor: pointer;
}

.options {
  height: 160px;
  width: 160px;
  margin: 50px;
}

.options1:hover {
  box-shadow: 0px 0px 50px white
}
.options1-selected {
  box-shadow: 0px 0px 50px white;
}

.options3:hover {
  box-shadow: 0px 0px 40px #14e319;
}
.options3-selected {
  box-shadow: 0px 0px 40px #14e319;
}

.options4:hover {
  box-shadow: 0px 0px 40px #FF00FF;
}
.options4-selected {
  box-shadow: 0px 0px 40px #FF00FF;
}

/*index div all*/
.divAll {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 100vh
}
/*can we change id/class on click to make glow stay?*/
i {
  color: white;
}

i:hover {
  color: #9ACD32;
  text-shadow: 0px 0px 40px #9ACD32;
}

#tableSeason {
  border-collapse: collapse;

}

#qTwo {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh
}


.tableTdSeason {
  border: 5px solid black;
}

.tableInSeason:hover {
  filter: drop-shadow(0px 0px 10px #999);
}
.season-selected, .season-selected:hover {
  filter: drop-shadow(0px 0px 10px #FFF);
}

.resultHolder {
  /*change next three lines later*/
  border: 2px ridge white;
  width: 500px;
  height: 280px;
  margin: 40px;
  position: relative;
  top: 200px;
  padding: 0px;
  overflow: hidden;
  background-color: white;
}
.image {
  width: 100%;
  height: 100%;
}

.hamburgerlink {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 20px;
  font-family: 'Oswald', sans-serif;
  color: white;
}


li:hover {
  font-weight: 600;
  color: #9ACD32;
}

a:link {
  text-decoration: none;
}

li {
  display: inline-block;
}

/*#navBar {
  display: block;
  background-color: #262626;
  opacity: 0.8;
  height: 50px;
  width: 100%;
  position: fixed;
}
*/

#hamburger {
  display: block;
  position: fixed;
  margin-top: 5px;
  margin-left: 10px;
  float: left;
}
#hamburgerList {
  list-style-type: none;
  float:left;
  display: none;
  position: fixed;
  margin-top: 40px;
  margin-left: 10px;
  margin-right: 100px;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 80px;
  background-color: #262626;
  opacity: 0.5;
}

#start {
}

#explore {
  margin-top: 20px;
}

#about {
  margin-top: 20px;
  margin-bottom: 30px;
}

#cityName1, #cityName2, #cityName3 {
  position: absolute;
  left: 30px;
  bottom: 30px;
  color: white;
  text-shadow: 1px 1px 1px black;
}

.columns-container {
  display: flex;
  flex-direction: row;
  height: auto;
  padding: 10px;
  overflow: hidden;
}

#column1 {
  display: flex;
  flex-direction: column;
  height: auto;
  width: 30%;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 60px;
}
#column2 {
  display: flex;
  flex-direction: column;
  height: auto;
  width: 30%;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 60px;
}
#column3 {
  display: flex;
  flex-direction: column;
  height: auto;
  width: 30%;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 60px;
}
.card-half {
  width: auto;
  height: 100%;
  margin-top: 5px;
  margin-bottom: 5px;
}
.card-long {
  width: auto;
  height: 70vh;
  margin-top: 5px;
  margin-bottom: 5px;
}
.card-short {
  width: auto;
  height: 28vh;
  margin-top: 5px;
  margin-bottom: 5px;
}
.background {
  background-color: white;
  padding: 10px;
  border-radius: 5px;
}
#map, #weather, #calendar{
  display: block;
  margin: auto;
  width: 250px;
}
#embassy, #flight, #language, #currency {
  display: inline-block;
  float: left;
  width: 48%;
  margin: 3px;
}
#card1 {
position: relative;
width: 100%;
padding: 0;
background-color: #544f4f;
}
#card3 {
  height: 460px;
  overflow: scroll;
}
#trip-advisor {
  width: 120px;
  float: left;
  margin-right: 10px;
  clear: right;
}
#blurb-title {
  font-size: 2em;
}
#blurb-text {
  margin-top: 15px;
  font-size: 1.3em;
  margin-left: 5px;
}
#card6 {
  height: 350px;
}
#city-view {
  margin: 0;
  width: 100%;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.resultsHighlightButton:hover {
  text-shadow: 0px 0px 40px #FF00FF;
}
.resultsHighlightButton:active {
  text-shadow: 0px 0px 40px #FF00FF;
}
.resultsHighlightButton:visited {
  text-shadow: 0px 0px 40px #FF00FF;
}

.classStyle {
  display: block;
  color:red;
}

